fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -84,9 +84,9 @@ button:focus-visible {
     background-color: #191919;
   }
   button {
-    background-color: #213547;
+    background-color: #f9f9f9;
   }
-  .card div {
-    background-color: #213547;
+  div {
+    background-color: #f9f9f9;
   }
 }
